# small-llm-experiments

./: .gitignore  README.md  gpt_5_string.txt  gpt_5_string_2.txt  list1.csv  list2.csv  list3.csv  list4.csv  list5.csv  main.py  notebook.ipynb  plots.ipynb  pyproject.toml  run.sh
experiments/: __init__.py
